don't wrap lines inside table cells
Don't wrap text in table cells (the timestamp column especially),
it made the table waste a lot of screen space.

Change-Id: I9e1274fd6b87703237a547e5f3f545930556667f

--- a/var/www/wikistats/css/main.css
+++ b/var/www/wikistats/css/main.css
@@ -1,3 +1,7 @@
+td {
+    white-space:nowrap;
+}
+
 td.timestamp-ok {
     background: #aaeeaa;
 }
@@ -11,5 +15,5 @@ td.timestamp-crit {
 }
 
 th.head {
-	text-align: center;
+    text-align: center;
 }
