add missing CSS for colored http status columns
Change-Id: I9dbdc4cd47c3ba9d4b11faab779d73462e34e301

--- a/var/www/wikistats/css/main.css
+++ b/var/www/wikistats/css/main.css
@@ -21,3 +21,24 @@ th.head {
 td {
     font-size: 90%;
 }
+
+td.status-ok {
+    background: #aaeeaa;
+}
+
+td.status-null {
+    background: #dd6666;
+}
+
+td.status-fourfive {
+    background: #ee3333;
+}
+
+td.status-nine {
+    background: #aa3333;
+}
+
+td.status-default {
+    background: #dd6666;
+}
+
